<?xml version="1.0"?>
<package>
  <name>iirob_led</name>
  <version>0.2.0</version>
  <description>The iirob_led package for controlling LED strips from with ROS.</description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>

  <license>LGPLv3</license>

  <author email="bjoern.hein@kit.edu">Björn Hein</author>
  <author email="ruben.baumann@student.kit.edu">Ruben Baumann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>