<?xml version="1.0"?>
<package>
  <name>iirob_led</name>
  <version>0.3.0</version>
  <description>
    The iirob_led package for controlling LED strips from with ROS.
  </description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>
  <author email="bjoern.hein@kit.edu">Björn Hein</author>
  <author email="ruben.baumann@student.kit.edu">Ruben Baumann</author>
  <author email="redbaronqueen@gmail.com">Aleksandar Vladimirov Atanasov</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>

  <export></export>
</package>
