<?xml version="1.0"?>
<package format="2">
  <name>iirob_led</name>
  <version>0.4.0</version>
  <description>
    The iirob_led package for controlling LED strips from with ROS.
  </description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>
  <author email="bjoern.hein@kit.edu">Björn Hein</author>
  <author email="ruben.baumann@student.kit.edu">Ruben Baumann</author>
  <author email="redbaronqueen@gmail.com">Aleksandar Vladimirov Atanasov</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export></export>
</package>
